force-app/main/default/objects/plaunch__PipelaunchLog__c/plaunch__PipelaunchLog__c.object-meta.xml
<CustomObject>
    <description>Logs to debug the application and the asynchronous operations</description>
    <label>PipeLaunch Log</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PipeLaunch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>