force-app/main/default/objects/plaunch__PipelaunchLog__c/fields/plaunch__Level__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Level__c</fullName>
    <description>Level</description>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
                <default>true</default>
                <label>DEBUG</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>