force-app/main/default/objects/plaunch__PipelaunchLog__c/fields/plaunch__Log__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Log__c</fullName>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>