force-app/main/default/objects/plaunch__PipelaunchLog__c/fields/plaunch__Service__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Service__c</fullName>
    <description>Type of service to better filtering the logs. Eg. Signals</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signals</fullName>
            </value>
            <value>
                <fullName>Sales Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>