force-app/main/default/objects/plaunch__PipelaunchLog__c/listViews/plaunch__All.listView-meta.xml
<ListView>
    <fullName>plaunch__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>plaunch__Level__c</columns>
    <columns>plaunch__Log__c</columns>
    <columns>plaunch__Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>