force-app/main/default/objects/plaunch__PipelaunchLog__c/listViews/plaunch__Signals.listView-meta.xml
<ListView>
    <fullName>plaunch__Signals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>plaunch__Level__c</columns>
    <columns>plaunch__Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>plaunch__Service__c</field>
        <operation>equals</operation>
        <value>Signals</value>
    </filters>
    <label>Signals</label>
</ListView>